fixed flex wrap property and responsiveness + CI/CD pipeline

--- a/src/components/home/homeStyle.css
+++ b/src/components/home/homeStyle.css
@@ -163,7 +163,7 @@
 }
 .row{
   flex-direction: row;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   justify-content: space-around;
 }
 
